@@ -1,4 +1,5 @@
 0.03
+ - Add basic tests.
  - Add screenshot of example app to doc.
  - Update copyright years.
 
